# docker-compose-exercise

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  nginx.conf  pyproject.toml
