[tool.poetry]
name = "docker-compose"
version = "0.1.0"
description = ""
authors = ["Pablo Goldszeft <pgoldszeft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
redis = "^5.0.1"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
